# sequence_alignment

./: README.md  deterministic_alignment.py  main.py  old_norse_alignment.py  phmm.py  requirements.txt  utils.py
2/: multi.py
docs/: main.tex
hmm/: example.py
rust_alignment/: Cargo.toml
rust_alignment/src/: main.rs
